--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,54 @@
 
 <ion-content [fullscreen]="true">
   <div class="ion-text-center"><h2>Introducerea volorilor obtinute</h2></div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        <div class="ion-text-left">
+          <ion-icon name="hand-left-outline"></ion-icon>
+          Bratul stang
+        </div>
+      </ion-card-title>
+      <ion-card-subtitle>
+        <div class="ion-text-left">Prima masuratoare</div>
+      </ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col><div class="ion-text-center">Sistolica</div></ion-col>
+          <ion-col><div class="ion-text-center">Diastolica</div></ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <div class="ion-text-center">
+              <ion-item fill="solid">
+                <ion-label position="floating">Valoarea</ion-label>
+                <ion-input
+                  type="number"
+                  placeholder="0"
+                  [(ngModel)]="pr_l_sis"
+                ></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+          <ion-col>
+            <div class="ion-text-center">
+              <ion-item fill="solid">
+                <ion-label position="floating">Valoarea</ion-label>
+                <ion-input
+                  type="number"
+                  placeholder="0"
+                  [(ngModel)]="pr_l_dis"
+                ></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
   <ion-card>
     <ion-card-header>
@@ -33,7 +81,11 @@
             <div class="ion-text-center">
               <ion-item fill="solid">
                 <ion-label position="floating">Valoarea</ion-label>
-                <ion-input placeholder="0"></ion-input>
+                <ion-input
+                  type="number"
+                  placeholder="0"
+                  [(ngModel)]="pr_r_sis"
+                ></ion-input>
               </ion-item>
             </div>
           </ion-col>
@@ -41,7 +93,11 @@
             <div class="ion-text-center">
               <ion-item fill="solid">
                 <ion-label position="floating">Valoarea</ion-label>
-                <ion-input placeholder="0"></ion-input>
+                <ion-input
+                  type="number"
+                  placeholder="0"
+                  [(ngModel)]="pr_r_dis"
+                ></ion-input>
               </ion-item>
             </div>
           </ion-col>
@@ -53,43 +109,22 @@
   <ion-card>
     <ion-card-header>
       <ion-card-title>
-        <div class="ion-text-left">
-          <ion-icon name="hand-left-outline"></ion-icon>
-          Bratul stang
+        <div class="ion-text-center">
+          Tensiunea ar trebui sa fie in intervalul {{ optimal_pr_sis + '/' +
+          optimal_pr_dis}}
         </div>
       </ion-card-title>
-      <ion-card-subtitle>
-        <div class="ion-text-left">Prima masuratoare</div>
-      </ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-grid>
-        <ion-row>
-          <ion-col><div class="ion-text-center">Sistolica</div></ion-col>
-          <ion-col><div class="ion-text-center">Diastolica</div></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-              <ion-item fill="solid">
-                <ion-label position="floating">Valoarea</ion-label>
-                <ion-input placeholder="0"></ion-input>
-              </ion-item>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="ion-text-center">
-              <ion-item fill="solid">
-                <ion-label position="floating">Valoarea</ion-label>
-                <ion-input placeholder="0"></ion-input>
-              </ion-item>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+      Ne completarea tutror capurilor nu permite salvarea datelor.
+      <div class="ion-text-right">
+        <ion-button
+          [disabled]="AllValuesExisting()"
+          (click)="SaveBloodPreasure()"
+          >Salveaza</ion-button
+        >
+      </div>
     </ion-card-content>
   </ion-card>
-
-  <div class="ion-text-right"><ion-button>Salveaza</ion-button></div>
 </ion-content>
