Am adaugat alerta pentru depasirea valorilor normale.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -122,8 +122,9 @@
         <ion-button
           [disabled]="AllValuesExisting()"
           (click)="SaveBloodPreasure()"
-          >Salveaza</ion-button
         >
+          Salveaza
+        </ion-button>
       </div>
     </ion-card-content>
   </ion-card>
