--- a/src/app/congrats/congrats.page.html
+++ b/src/app/congrats/congrats.page.html
@@ -1,7 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>congrats</ion-title>
+    <ion-title class="ion-text-center"
+      >Felicitari
+      <ion-icon name="checkmark-circle-outline"></ion-icon>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Succes</ion-card-title>
+      <ion-card-subtitle>Valorile au fost preluate!</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      Ura! Tensiunea ta arteriala se situeaza in intervalul normal.
+    </ion-card-content>
+  </ion-card>
+</ion-content>
