--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
         </div>
       </ion-card-title>
       <ion-card-subtitle>
-        <div class="ion-text-left">Prima masuratoare</div>
+        <div class="ion-text-left">{{first_or_second_check[no_tries]}}</div>
       </ion-card-subtitle>
     </ion-card-header>
 
@@ -66,7 +66,7 @@
         </div>
       </ion-card-title>
       <ion-card-subtitle>
-        <div class="ion-text-right">Prima masuratoare</div>
+        <div class="ion-text-right">{{first_or_second_check[no_tries]}}</div>
       </ion-card-subtitle>
     </ion-card-header>
 
